working on fixing flickering for block backgrounds

--- a/src/stylesheets/layout.scss
+++ b/src/stylesheets/layout.scss
@@ -247,6 +247,10 @@ nav {
     margin: 0 0 1.2rem 0;
     min-height: 140px;
     backdrop-filter: blur(25px) saturate(120%);
+    backface-visibility: hidden; // should fix flickering
+    -webkit-backface-visibility: hidden;
+    // -webkit-transform: translateZ(0);
+    // -webkit-perspective: 1000;
     background: $block-bg;
     border-radius: 1.5rem;
     padding: 1.5rem !important;
